samples/_failures_safe/1761297660_1a61e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4ac6e89.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_e4ac6e89.c:160:9: error: expected expression at end of input
  160 |         if (
      |         ^~
./samples/SAFE/__tmp_e4ac6e89.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e4ac6e89.c:160:9: error: expected declaration or statement at end of input
